# az-ai-devcontainer

./: AGENTS.md  README.md  azure.yaml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/: copilot-instructions.md
infra/: README.md  deployments.yaml  main.bicep  main.parameters.json
infra/hooks/: postprovision.sh
infra/scripts/: deploy_models.py  sync_deployments_catalog.py
notebooks/: SampleNotebook.ipynb
